--- a/app/src/main/res/values-de/strings_final.xml
+++ b/app/src/main/res/values-de/strings_final.xml
@@ -45,5 +45,6 @@
     <string name="alert_funds_restoration_message">If you chose the wrong network during your crypto transfer from the exchange, this guide will help you recover your funds</string>
 
     <string name="common_custom">Custom</string>
+    <string name="common_server_unavailable">The server is not available, please try again later</string>
 
 </resources>
