--- a/app/src/main/res/values-ru/strings_final.xml
+++ b/app/src/main/res/values-ru/strings_final.xml
@@ -45,6 +45,7 @@
     <string name="alert_funds_restoration_message">Если вы совершили ошибку с выбором сети при переводе средств с биржи, эта инструкция поможет вам восстановить средства</string>
 
     <string name="common_custom">Пользовательский</string>
+    <string name="common_server_unavailable">Сервер недоступен, повторите попытку позднее</string>
 
     <string name="main_page_balance">Баланс</string>
     <string name="main_processing_full_amount">Обработка полной суммы…</string>
