--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -217,19 +217,33 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_settings_title" />
 
             <TextView
+                android:id="@+id/tv_app_currency"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
+                android:text="@string/details_row_title_currency"
+                android:textColor="@color/darkGray6"
+                android:textSize="16sp"
+                app:drawableEndCompat="@drawable/ic_angle_bracket_right"
+                app:drawableTint="@color/darkGray1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_settings_title" />
+
+            <TextView
                 android:id="@+id/tv_disclaimer"
                 android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawablePadding="15dp"
-                    android:paddingTop="7dp"
-                    android:paddingBottom="7dp"
-                    android:text="@string/disclaimer_title"
-                    android:textColor="@color/darkGray6"
-                    android:textSize="16sp"
-                    app:drawableEndCompat="@drawable/ic_angle_bracket_right"
-                    app:drawableTint="@color/darkGray1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_settings_title" />
+                android:layout_height="wrap_content"
+                android:drawablePadding="15dp"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
+                android:text="@string/disclaimer_title"
+                android:textColor="@color/darkGray6"
+                android:textSize="16sp"
+                app:drawableEndCompat="@drawable/ic_angle_bracket_right"
+                app:drawableTint="@color/darkGray1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_app_currency" />
 
             <TextView
                 android:id="@+id/tv_card_tou"
