--- a/app/src/main/res/values-ru/strings_final.xml
+++ b/app/src/main/res/values-ru/strings_final.xml
@@ -45,9 +45,18 @@
     <string name="alert_funds_restoration_message">Если вы совершили ошибку с выбором сети при переводе средств с биржи, эта инструкция поможет вам восстановить средства</string>
 
     <string name="common_custom">Пользовательский</string>
+    <string name="common_notice">Уведомление</string>
+    <string name="common_attention">Внимание</string>
 
     <string name="main_page_balance">Баланс</string>
     <string name="main_processing_full_amount">Обработка полной суммы…</string>
     <string name="main_manage_tokens">Управление токенами</string>
     <string name="token_item_no_rate">Нет цены</string>
+
+    <string name="token_details_hide_alert_title">Скрыть %s</string>
+    <string name="token_details_hide_alert_hide">Скрыть</string>
+    <string name="token_details_hide_alert_message">Вы скрываете токен с главного экрана, но в любой момент сможете добавить его обратно.</string>
+    <string name="token_details_unable_hide_alert_title">Невозможно скрыть %s</string>
+    <string name="token_details_unable_hide_alert_message">Токен %s является основной валютой в сети %s и не может быть скрыт, до тех пор пока у вас в списке есть другие токены этой сети.</string>
+
 </resources>
