--- a/app/src/main/res/values-it/strings_final.xml
+++ b/app/src/main/res/values-it/strings_final.xml
@@ -45,5 +45,13 @@
     <string name="alert_funds_restoration_message">If you chose the wrong network during your crypto transfer from the exchange, this guide will help you recover your funds</string>
 
     <string name="common_custom">Custom</string>
+    <string name="common_notice">Notice</string>
+    <string name="common_attention">Attention</string>
+
+    <string name="token_details_hide_alert_title">Hide %s</string>
+    <string name="token_details_hide_alert_hide">Hide</string>
+    <string name="token_details_hide_alert_message">You hide the token from the main screen, but you can add it back at any time.</string>
+    <string name="token_details_unable_hide_alert_title">Unable to hide %s</string>
+    <string name="token_details_unable_hide_alert_message">The %s token is the main currency on the %s network and cannot be hidden as long as you have other tokens on this network in the list.</string>
 
 </resources>
