--- a/app/src/main/res/values-ru/strings_final.xml
+++ b/app/src/main/res/values-ru/strings_final.xml
@@ -47,7 +47,7 @@
     <string name="common_custom">Пользовательский</string>
 
     <string name="main_page_balance">Баланс</string>
-    <string name="main_processing_full_amount">Некоторые сети недоступны</string>
+    <string name="main_processing_full_amount">В сумме учтены не все монеты</string>
     <string name="main_manage_tokens">Управление токенами</string>
     <string name="token_item_no_rate">Нет цены</string>
 </resources>
