--- a/app/src/main/res/layout/card_total_balance.xml
+++ b/app/src/main/res/layout/card_total_balance.xml
@@ -52,7 +52,7 @@
                     app:veilLayout_veiled="true"
                     app:veilLayout_radius="4dp"
                     app:layout_constraintTop_toBottomOf="@id/tv_title"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/tv_processing"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     tools:veilLayout_veiled="false">
@@ -80,7 +80,8 @@
                     android:textSize="12sp"
                     android:text="@string/main_processing_full_amount"
                     app:layout_constraintTop_toBottomOf="@id/veil_balance"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:visibility="visible" />
 
             <TextView
                     android:id="@+id/tv_currency_name"
